--- a/_posts/2024-03-07-iPad在代码方面是否有生产力？.md
+++ b/_posts/2024-03-07-iPad在代码方面是否有生产力？.md
@@ -15,7 +15,7 @@ image:
 
 iPadOS让整个iPad产品线有了新的玩法，但介于桌面端与移动端的系统又让整个iPad多了一丝小丑的气息。在中国，iPad的主要消费群体是大学生，iPad Air的确让无纸化学习成为了新的潮流，但性能更为强劲的iPad Pro也确实因为其高昂的售价让他不得不与真正的笔记本电脑进行竞争。虽然有Playground这样的第一方编程软件加持，但其入门与玩具的定位始终上不了台面，掀起不了波澜。
 
-尽管iPad的生态内拥有不少类似VS Code的优秀文本编辑器，但大多数的用户都希望有集成开发环境（IDE），可以一键在本地运行。正这样的局面，导致了目前iPad Pro的尴尬地位。不过我们依然可以在有限的选择中大致找到两个方向：
+尽管iPad的生态内拥有不少类似VS Code的优秀文本编辑器，但大多数的用户都希望有集成开发环境（IDE），可以一键在本地运行。正因为这样的局面，才导致了目前iPad Pro的尴尬地位。不过我们依然可以在有限的选择中大致找到两个方向：
 
 ### 本地运行IDE
 
