--- a/_posts/2024-03-07-iPad在代码方面是否有生产力？.md
+++ b/_posts/2024-03-07-iPad在代码方面是否有生产力？.md
@@ -13,27 +13,27 @@ image:
 
 ## iPadOS：永远的痛
 
-iPadOS让整个iPad产品线有了新的玩法，但介于桌面端与移动端的系统又让整个iPad多了一丝小丑的气息。在中国，iPad的主要消费群体是大学生，iPad Air的确让无纸化学习成为了新的潮流，但性能更为强劲的iPad Pro也确实因为其高昂的售价让他不得不与真正的笔记本电脑进行竞争。虽然有Playground这样的第一方编程软件加持，但其入门与玩具的定位始终上不了台面，掀起不了波澜。
+尽管iPadOS让整个iPad产品线有了新的玩法，但这介于桌面端与移动端的系统又让整个iPad多了一丝小丑的气息：上不去也下不来。不过还好，在中国，iPad的主要消费群体是大学生，iPad Air的确让无纸化学习成为了新的潮流，但性能更为强劲的iPad Pro也确实因为其高昂的售价让他不得不与真正的笔记本电脑进行竞争。虽然有Playground这样的第一方编程软件加持，但其入门与玩具的定位始终上不了台面，掀起不了波澜。因此：*你的下一台电脑，还得是电脑。*
 
-尽管iPad的生态内拥有不少类似VS Code的优秀文本编辑器，但大多数的用户都希望有集成开发环境（IDE），可以一键在本地运行。正因为这样的局面，才导致了目前iPad Pro的尴尬地位。不过我们依然可以在有限的选择中大致找到两个方向：
+不可否认，iPad的生态内拥有不少类似VS Code的优秀文本编辑器，但大多数的用户都希望有集成开发环境（IDE），可以一键在本地运行。正是这样的局面，才导致了目前iPad Pro的尴尬地位。不过我们依然可以在有限的选择中找到大致两个方向：
 
 ### 本地运行IDE
 
 此时，许多既拥有iPad，又正在初学C语言或Python的大一新生开始了幻想：
 
->这iPad配上键盘岂不是完美的移动生产力？我能在上面写程序吗？上课直接带个平板过去多方便？
+>这iPad配上键盘岂不是完美的移动生产力？要是我能在上面写程序，上课直接带个平板过去多方便啊！
 
-但可惜，目前iPad端的ide大多价格高昂，廉价免费的编辑器又缺胳膊少腿。因此在重重阻拦中我将目光投向了：远程运行。
+但可惜，目前iPad端的ide大多价格高昂，而廉价免费的替代品又缺胳膊少腿。因此在重重阻拦中我将目光投向了：远程运行。
 
 ### 远程运行IDE
 
-经过在知乎的搜寻，我找到了GitHub推出的**Codespace**。理论上说，只要你的设备有浏览器，能打字，那它就能直接运行这个远程VS Code。其价格也算合理：每个用户每个月有60小时的免费使用时间，超出部分按一小时0.18美元计费。事实上普通的60小时对于普通学生来说绰绰有余。另外一个加分项就是可以直接打开自己的repo进行编辑并发布，可以说是非常适合目前我的需求了。
+在知乎搜寻一阵子后，我发现了GitHub推出的**Codespace**。理论上说，只要你的设备有浏览器，能打字，那它就能直接运行这个远程VS Code。其价格也算合理：使用2核的处理器，每个用户每个月有60小时的免费使用时间，超出部分按一小时0.18美元计费。事实上，免费的60小时对于普通学生来说绰绰有余；此外，Codespace的另外一个加分项就是可以直接pull自己的repo进行编辑并发布，可以说是非常适合目前我的需求了。
 
-唯一美中不足的一点是，这种解决方案完全抛弃了iPad的本地性能，让iPad Pro 12.9‘成为了一个售价高昂的Chromebook。但产品定位并不是我们今天要考虑的事情*（而是Tim Cook）*，重要的是我们要让他跑起来！
+唯一美中不足的是，这种解决方案完全抛弃了iPad的本地性能，让iPad Pro 12.9‘成为了一个售价高昂的Chromebook。但产品定位并不是我们今天要考虑的事情*（而是Tim Cook）*，重要的是我们要让他跑起来！
 
 ## Safari：永远的生产力
 
-曾经我在Safari里修改我的Figma设计稿；如今，我在Safari里push我的repo！根据测试，Codespace能够完美使用命令行等工具，可以上传文件，甚至可以安装所有的插件，使用起来和本地VS Code几乎没有任何差别，这让我感到十分惊喜，这和Figma蛋疼的触控板操作显得十分小丑。
+曾经我在Safari里修改我的Figma设计稿；如今，我在Safari里push我的repo！根据测试，Codespace能够完美使用命令行等工具，可以上传文件，甚至可以安装所有的插件，使用起来和本地VS Code几乎没有任何差别，这让我感到十分惊喜，并让隔壁网页端Figma蛋疼的触控板操作显得更加小丑。
 
 但是，我碰到了一个极其恼人的情况：在浏览器中双指点击使用右键功能时，会**同时**呼出Safari和Codespace的菜单，并且这两个菜单会重叠在一起！并且你无法点击隐藏在Safari那没用的菜单后面你真正想要点到的按钮！并且更不用提到复制粘贴时的不易被察觉但就是让你不舒服的细微延迟，以及与iPad操作逻辑有一些冲突的快捷键映射。
 
