--- a/_posts/2019-08-09-Chirpy官方语法说明书.md
+++ b/_posts/2019-08-09-Chirpy官方语法说明书.md
@@ -8,7 +8,7 @@ render_with_liquid: false
 ---
 
 >此贴为搬运贴，请读者悉知。
-{: .prompt-warning}
+{: .prompt-info}
 
 This tutorial will guide you how to write a post in the _Chirpy_ template, and it's worth reading even if you've used Jekyll before, as many features require specific variables to be set.
 
