--- a/_posts/2024-03-13-宝宝也能看懂的考研数学笔记.md
+++ b/_posts/2024-03-13-宝宝也能看懂的考研数学笔记.md
@@ -82,6 +82,6 @@ _目前的知识图谱_
 
 ## 结语
 
-最后，我也期待这个项目最后能圆满结束，发出一份完整的Release；我也可以顺利上岸，从事我喜欢的行业与工作。也希望看到这里的你心想事成，一切顺利！
+最后，我也期待这个项目最后能圆满结束，发出一份完整的Release；我也可以顺利上岸，从事我喜欢的行业与工作。也希望看到这里的你心想事成，一切顺利！也希望我的平板的新键帽快点到，现在打字真的好不爽……
 
 > *不要温和地走进那个良夜，老年应在日暮时燃烧咆哮；怒斥，怒斥光明的消逝。*
